Agregar vistas para crud de Producto

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProductosSaludables
 excludes=
+file.reference.postgresql-42.2.18.jre6.jar=C:\\Users\\Steven\\Downloads\\postgresql-42.2.18.jre6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-42.2.18.jre6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProductosSaludables
-main.class=vista.JavaApplication1
+main.class=vista.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
