--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProductosSaludables
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Universidad\\Downloads\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
