--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Universidad\\Downloads\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Steven\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\Universidad\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
