--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.jcalendar-1.4.jar-1=C:\\Users\\Universidad\\Downloads\\jcalendar-
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Universidad\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\Steven\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
