--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,16 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProductosSaludables
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\Universidad\\Downloads\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\Steven\\Downloads\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-2=C:\\Users\\Steven\\Downloads\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-2}
+    ${libs.JCalendar_1.4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
